--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,12 +3,12 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=App Title
+appTitle=Open Text Demo
 
 #YDES: Application description
 appDescription=A Fiori application.
 #XTIT: Main view title
-title=App Title
+title=PCR Invoices
 
 flpTitle=OpenText Demo
 
